# python-project-52

./: .gitignore  Makefile  README.md  build.sh  conftest.py  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: CI.yml
task_manager/: .coveragerc  admin.py  apps.py  middleware.py  models.py  rollbar.py  settings.py  signals.py  test.py  urls.py  views.py  wsgi.py
task_manager/forms/: __init__.py  label_forms.py  status_forms.py  task_forms.py  user_forms.py
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_label_task_labels.py  0004_auto_20250901_0915.py  0005_alter_task_description.py
task_manager/models/: __init__.py  label.py  status.py  task.py  user.py
task_manager/templates/: base.html  index.html
task_manager/templates/task_manager/: base.html  index.html  register.html  users.html
task_manager/templates/task_manager/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/task_manager/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/task_manager/tasks/: create.html  delete.html  detail.html  list.html  update.html
task_manager/templates/task_manager/users/: delete.html  login.html  register.html  update.html  users.html
task_manager/tests/: .coveragerc  conftest.py  test_labels.py  test_status.py  test_tasks.py  test_users.py
task_manager/views/: __init__.py  auth_views.py  label_views.py  status_views.py  task_views.py  user_views.py
