[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "ruff>=0.12.7",
]

[tool.setuptools]
package-dir = { "hexlet-code" = "task_manager" }

[tool.uv]
index-url = "https://pypi.org/simple"
