[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.9",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "whitenoise>=6.9.0",
]

[tool.setuptools]
package-dir = { "hexlet-code" = "task_manager" }

[tool.uv]
index-url = "https://pypi.org/simple"
